# routes/api.php
@@ -7,4 +7,3 @@ require __DIR__.'/api/patient.php';
 require __DIR__.'/api/calendar.php';
 require __DIR__.'/api/dental-examination.php';
 require __DIR__.'/api/material.php';
-require __DIR__.'/api/auditable.php';
