# routes/api/dental-examination.php
@@ -1,11 +1,18 @@
 <?php
 
+use App\Http\Controllers\AuditableController;
 use App\Http\Controllers\DentalExaminationController;
 use App\Http\Controllers\DentalExaminationFileController;
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/dental-examination/export', [DentalExaminationController::class, 'export'])
         ->name('dentalExamination.export');
+    Route::get('/dental-examination/{uuid}/history', [AuditableController::class, 'index'])
+        ->defaults('resource', 'dental-examination')
+        ->name('dentalExamination.history');
+    Route::get('/dental-examination/{uuid}/history/export', [AuditableController::class, 'export'])
+        ->defaults('resource', 'dental-examination')
+        ->name('dentalExamination.history.export');
     Route::get('/dental-examination/selectlist', [DentalExaminationController::class, 'selectList'])
         ->name('dentalExamination.selectList');
     Route::apiResource('/dental-examination', DentalExaminationController::class)
